# small-projects

./: LICENSE.md  README.md
bagels/: dune-project
bagels/lib/: dune  lib.ml
bagels/test/: dune
birthdayparadox/: birthdayparadox.opam  dune-project
birthdayparadox/lib/: birthdayparadox.ml  dune
bitmapmessage/: bitmapmessage.opam  dune-project
bitmapmessage/lib/: dune  lib.ml
bitmapmessage/test/: dune
