(lang dune 3.9)

(name bagels)

(generate_opam_files true)

(source
 (github arioston/small-projects))

(authors "Arioston Jaerger")

(maintainers "Arioston Jaerger")

(license MIT)

(package
 (name bagels)
 (synopsis "In Bagels, a deductive logic game, you must guess a secret three-digit number based on clues")
 (description "In Bagels, a deductive logic game, you must guess a secret three-digit number based on clues. 
                The game offers one of the following hints in response to your guess: “Pico” when your guess 
                has a correct digit in the wrong place, “Fermi” when your guess has a correct digit in the correct 
                place, and “Bagels” if your guess has no correct digits.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
